get xlocalhost from vue/vite

--- a/client/nginx/index.html
+++ b/client/nginx/index.html
@@ -1,12 +1,12 @@
 <html>
   <head>
-    <title>Docker nginx Tutorial</title>
+    <title>Docker nginx</title>
   </head>
 
   <body>
     <div class="container">
-      <h1>Hello DigitalOcean</h1>
-      <p>This Nginx page is brought to you by Docker and DigitalOcean</p>
+      <h1>Hello</h1>
+      <p>This is an Nginx page</p>
     </div>
   </body>
 </html>
